src/test/ArrayNonnullableSize/ArrayNonnullableSize.expected
error: ArrayNonnullableSize.panda:3:13: panda.collections.Array<panda.core.String> may not be created with a length, panda.core.String does not have a default value
1 error
