src/test/ArrayNonnullableSize/ArrayNonnullableSize.panda
var work := new Array<String?>(3)

var fail := new Array<String>(3)
